Adding pump-ui-buttons and pump-ui-colors